name:           parsec
version:        1.0.0
category:       Parsing
synopsis:       Parallel Parsing Processes
description: Koen Claessen PPP
license:        GPL
license-file:   LICENSE
author:         Koen Claessen
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.12
tested-with:    GHC==7.4.1
build-type:     Simple

library
  default-language: Haskell2010
  build-depends: base==4.*
--  build-depends: mtl==2.1.*
--  build-depends: containers>=0.4 && <0.6
--  build-depends: directory>=1.1 && <2

  exposed-modules: 
       Text.ParserCombinators.Parsek



 
